--- a/index1.html
+++ b/index1.html
@@ -65,7 +65,7 @@
 </div>
 
 
-<script src="index1.js"></script>
+<script src="js/index1.js"></script><script src="js/index1.js"></script>
 
 <script>
   function openPopup() {
